Fixed listing css bug where images overlapped due to max-height not being set

--- a/resources/css/local/listing.less
+++ b/resources/css/local/listing.less
@@ -134,6 +134,7 @@
 		display:block;
 		top: 2%;
 		max-width:96%;
+		max-height:96%;
 		margin:0 auto;
 	}
 
